Archive2/66/be623d74bd48ec/output
main.cpp:26:7: error: member 'pi' declared as a template
    U pi = U{3.14};
      ^
1 error generated.
